# service/src/main/java/md/webservice_counter/api/v1/UsersController.java
@@ -1,0 +1,68 @@
+/*
+ * The MIT License
+ *
+ * Copyright 2022 Marcin Drozdziński.
+ *
+ * Permission is hereby granted, free of charge, to any person obtaining a copy
+ * of this software and associated documentation files (the "Software"), to deal
+ * in the Software without restriction, including without limitation the rights
+ * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+ * copies of the Software, and to permit persons to whom the Software is
+ * furnished to do so, subject to the following conditions:
+ *
+ * The above copyright notice and this permission notice shall be included in
+ * all copies or substantial portions of the Software.
+ *
+ * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+ * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+ * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+ * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+ * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+ * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
+ * THE SOFTWARE.
+ */
+package md.webservice_counter.api.v1;
+
+import md.webservice_counter.model.dto.UserDto;
+import com.fasterxml.jackson.annotation.JsonProperty;
+import lombok.NoArgsConstructor;
+import lombok.RequiredArgsConstructor;
+import md.webservice_counter.exception.RegistrationException;
+import md.webservice_counter.model.type.UserRole;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.security.core.userdetails.User;
+import org.springframework.security.core.userdetails.UserDetails;
+import org.springframework.security.core.userdetails.UserDetailsService;
+import org.springframework.security.provisioning.InMemoryUserDetailsManager;
+import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RestController;
+
+@RestController
+@RequestMapping(ApiV1Endpoints.USERS)
+@RequiredArgsConstructor
+public class UsersController {
+
+    @Autowired
+    public InMemoryUserDetailsManager inMemoryUserDetailsManager;
+
+    @PostMapping
+    public void postUsers(
+            @RequestBody UserDto request
+    ) {
+
+        if (!inMemoryUserDetailsManager.userExists(request.getUsername())) {
+            inMemoryUserDetailsManager.createUser(
+                    User
+                    .withUsername(request.getUsername())
+                    .password("{noop}" + request.getPassword())
+                    .roles(UserRole.USER.name())
+                    .build());
+        } else {
+            throw new RegistrationException();
+        }
+
+    }
+
+}
