# service/src/main/java/md/webservice_counter/model/type/UserRole.java
@@ -21,13 +21,9 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
  */
-package md.webservice_counter.api.v1;
+package md.webservice_counter.model.type;
 
-public final class ApiV1Endpoints {
-    
-    private static final String PREFIX = "/v1";
-    
-    public static final String COUNTERS = PREFIX + "/counters";
-    public static final String USERS = PREFIX + "/users";
-    
+
+public enum UserRole {
+   USER 
 }
